[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "naucse_render"
version = '1.8'
description = 'Converts course material to naucse.python.cz API'
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'ansi2html',
    'mistune',
    'nbconvert>=6.0.7,<7.0',
    'traitlets',
    'click',
    'PyYAML',
    'Jinja2>3.0',
    'Pygments>=2.3.1',
    'markupsafe',
]
license = {text = "MIT"}

[project.urls]
'repository' = 'https://github.com/pyvec/naucse_render'

[[project.maintainers]]
name = 'Petr Viktorin'
email = 'encukou@gmail.com'

[project.optional-dependencies]
dev = ["pytest"]
