[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "naucse_render"
version = '1.10'
description = 'Converts course material to naucse.python.cz API'
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'ansi2html',
    'mistune>=2.0.3,<4',
    'nbconvert>=7.0,<8.0',
    'traitlets',
    'click',
    'PyYAML',
    'Jinja2>3.0',
    'Pygments>=2.3.1',
    'markupsafe',
    'lxml',
]
license = {text = "MIT"}

[project.urls]
'repository' = 'https://github.com/pyvec/naucse_render'

[[project.maintainers]]
name = 'Petr Viktorin'
email = 'encukou@gmail.com'

[project.optional-dependencies]
dev = ["pytest"]
